# deutsche-telekom-hackathon

./: .gitignore  README.md  pyproject.toml  video.MOV
backend/: main.py
backend/data/: sum_dataset.csv
backend/data/datasets/: UNdata_Export_20241124_044258778.csv  incomes.csv  outcomes.csv  transport_data.csv
backend/utils/: __init__.py  chain.py  dataset_context_writer.py  datasets.py  get_data.py  get_dataset_name.py  sql_query.py
data/: sum_dataset.csv
data/datasets/: POP.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  variables.css
frontend/src/components/: Button.css  Button.jsx  Footer.css  Footer.jsx  Header.css  Header.jsx  Inputfield.css  Inputfield.jsx  TabVariant.css  TabVariant.jsx
